[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bolt-client"
version = "0.1.0"
description = "Python client for Bolt key-value database"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Cloud55"},
]
keywords = ["bolt", "database", "key-value", "cache", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/cloud55/bolt"
Documentation = "https://github.com/cloud55/bolt#readme"
Repository = "https://github.com/cloud55/bolt"

[tool.setuptools.packages.find]
where = ["."]
include = ["bolt_client*"]
