[package]
name = "boltctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boltctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteordered = "0.6.0"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
dirs = "4"

[profile.release]
lto = true
panic = "abort"
