[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
byteordered = "0.6.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls-pemfile = "1"
storage = { path = "../storage" }
cluster = { path = "../cluster" }
bcrypt = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
