[package]
name = "storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
tokio = { version = "1", features = ["sync", "fs", "io-util", "rt", "rt-multi-thread", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
crc32fast = "1.3"
# LZ4 compression for large values (pure Rust, compatible with Rust 1.72)
lz4_flex = "0.10"
